--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,10 @@ body {
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
+}
+h1,
+h2,
+h3 {
     color: rgba(255, 255, 255, 0.87);
 }
 .container {
@@ -67,7 +71,7 @@ h1 {
     padding: 2em;
 }
 
-/* button {
+button {
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
@@ -77,6 +81,7 @@ h1 {
     background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
+    color: inherit;
 }
 button:hover {
     border-color: #646cff;
@@ -84,7 +89,7 @@ button:hover {
 button:focus,
 button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
-} */
+}
 
 @media (prefers-color-scheme: light) {
     :root {
@@ -97,4 +102,10 @@ button:focus-visible {
     button {
         background-color: #f9f9f9;
     }
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
 }
